chore(config): migrate folder one step toward for accessibility
